After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 641360 - gnome-control-center Date & Time crashes
gnome-control-center Date & Time crashes
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Date and Time
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 642220 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-02-03 16:12 UTC by Oleg
Modified: 2011-03-17 23:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
zone.tab (19.23 KB, application/octet-stream)
2011-03-17 23:45 UTC, Adam Plumb
Details

Description Oleg 2011-02-03 16:12:40 UTC
During Fedora testing day http://fedoraproject.org/wiki/Test_Day:2011-02-03_GNOME3_Alpha
1. I've downloaded image
http://adamwill.fedorapeople.org/gnome3_test_day_20110203/gnome3_test_20110203.iso
2. Installed x86_64 binaries from here: http://koji.fedoraproject.org/koji/buildinfo?buildID=216849:

yum install http://kojipkgs.fedoraproject.org/packages/control-center/2.91.6/3.fc15/x86_64/control-center-filesystem-2.91.6-3.fc15.x86_64.rpm http://kojipkgs.fedoraproject.org/packages/control-center/2.91.6/3.fc15/x86_64/control-center-2.91.6-3.fc15.x86_64.rpm

 yum install http://kojipkgs.fedoraproject.org/packages/control-center/2.91.6/3.fc15/x86_64/control-center-debuginfo-2.91.6-3.fc15.x86_64.rpm

3. Run Overview, type gnome-control date, select application => crash:

warning: core file may not match specified executable file.
Missing separate debuginfo for 
Try: yum --disablerepo='*' --enablerepo='*-debuginfo' install /usr/lib/debug/.build-id/84/7a57d366747b44bdc4f4da202bac44138ce33e /var/cache/abrt-di/usr/lib/debug/.build-id/84/7a57d366747b44bdc4f4da202bac44138ce33e
[New LWP 2372]
[New LWP 2392]
[New LWP 2373]
[Thread debugging using libthread_db enabled]
Core was generated by `gnome-control-center datetime'.
Program terminated with signal 11, Segmentation fault.

Thread 1 (Thread 0x7f4421bf1940 (LWP 2372))

  • #0 update_timezone
    at cc-datetime-panel.c line 407
  • #1 get_timezone_cb
    at cc-datetime-panel.c line 475
  • #2 get_timezone_notify
    at set-timezone.c line 373
  • #3 ??
    from /lib64/libdbus-1.so.3
  • #4 dbus_connection_dispatch
    from /lib64/libdbus-1.so.3
  • #5 ??
    from /usr/lib64/libdbus-glib-1.so.2
  • #6 g_main_context_dispatch
    from /lib64/libglib-2.0.so.0
  • #7 ??
    from /lib64/libglib-2.0.so.0
  • #8 g_main_loop_run
    from /lib64/libglib-2.0.so.0
  • #9 gtk_main
    from /usr/lib64/libgtk-3.0.so.0
  • #10 g_application_run
    from /lib64/libgio-2.0.so.0
  • #11 main
    at control-center.c line 152

Comment 1 Bastien Nocera 2011-02-04 01:35:39 UTC
It crashes because US/Eastern isn't in /usr/share/zoneinfo/zone.tab...
Comment 2 Bastien Nocera 2011-02-13 14:16:31 UTC
*** Bug 642220 has been marked as a duplicate of this bug. ***
Comment 3 Adam Plumb 2011-03-17 23:44:34 UTC
I'm running Fedora 15 Alpha with the latest updates and this still crashes for me with the following bt:

  • #0 update_timezone
    at cc-datetime-panel.c line 403
  • #1 get_timezone_cb
    at cc-datetime-panel.c line 472
  • #2 get_timezone_notify
    at set-timezone.c line 373
  • #3 d_pending_call_notify
    at dbus-gproxy.c line 1771
  • #4 ??
    from /lib/libdbus-1.so.3
  • #5 ??
    from /lib/libdbus-1.so.3
  • #6 dbus_connection_dispatch
    from /lib/libdbus-1.so.3
  • #7 message_queue_dispatch
    at dbus-gmain.c line 101
  • #8 g_main_dispatch
    at gmain.c line 2440
  • #9 g_main_context_dispatch
    at gmain.c line 3013
  • #10 g_main_context_iterate
    at gmain.c line 3091
  • #11 g_main_loop_run
    at gmain.c line 3299
  • #12 gtk_main
    at gtkmain.c line 1358
  • #13 gtk_application_run_mainloop
    at gtkapplication.c line 85
  • #14 g_application_run
    at gapplication.c line 1322
  • #15 main
    at control-center.c line 152

What exactly do I need to do to fix this?
Comment 4 Adam Plumb 2011-03-17 23:45:45 UTC
Created attachment 183686 [details]
zone.tab

Here is my zone.tab file
Comment 5 Bastien Nocera 2011-03-17 23:50:44 UTC
(In reply to comment #4)
> Created an attachment (id=183686) [details]
> zone.tab
> 
> Here is my zone.tab file

Different bug, which is already fixed in master:
commit 56cd9069eed492655c3d79f21a89b987432d3a3c
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Mar 15 01:57:15 2011 +0000

    datetime: Don't crash when the timezone is unknown
    
    Passing "posixrules" to cc_timezone_map_set_timezone() certainly
    won't work that well.
    
    https://bugzilla.redhat.com/show_bug.cgi?id=684593