datetime: Fix crash when TZ is an alias

Using the "backward" file from tzdata (available under the public
domain), we load the aliases for real timezones, to look them up
against our database.

https://bugzilla.gnome.org/show_bug.cgi?id=641360